# OpenCV_Project

./: .gitignore  README.md
OpenCVCarBoardDetect/: AnnPredict.cpp  AnnPredict.h  CMakeLists.txt  ColorLocate.cpp  ColorLocate.h  PlateLocate.cpp  PlateLocate.h  PlateRecognize.cpp  PlateRecognize.h  SobelLocate.cpp  SobelLocate.h  SvmPredict.cpp  SvmPredict.h  common.cpp  common.h  main.cpp
OpenCVCarBoardDetect/ann/: ann.xml  ann_zh.xml  字符序列.txt
OpenCVCliDemo/: a.out  run.sh
OpenCVFaceDetect/: CMakeLists.txt  main.cpp  main.h
OpenCVXcodeDemo/: .gitignore  CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  main.cpp
OpenCVXcodeDemo/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeRelWithDebInfo  ReRunCMake.make  XCODE_DEPEND_HELPER.make  ZERO_CHECK_cmakeRulesBuildPhase.makeDebug
OpenCVXcodeDemo/Debug/: OpenCVDemo
OpenCVXcodeDemo/OpenCVDemo.xcodeproj/: project.pbxproj
OpenCVXcodeDemo/OpenCVDemo.xcodeproj/project.xcworkspace/xcuserdata/xiaoxu.xcuserdatad/: UserInterfaceState.xcuserstate
OpenCVXcodeDemo/OpenCVDemo.xcodeproj/xcuserdata/xiaoxu.xcuserdatad/xcschemes/: xcschememanagement.plist
OpencvDemoCli/: main.cpp
